src/objects/Achievement__c.object
<CustomObject>
    <description>An achievement is used by the ThinkSmart app, a third-party application, to track employee activity as it relates to a specific achievement in order to provide incentives.</description>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualified__c</fullName>
        <label>Date Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old_Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points_Awarded__c</fullName>
        <label>Points Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <label>Record</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Fifth</fullName>
                </value>
                <value>
                    <fullName>Sixth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <recordTypes>
        <fullName>CPC</fullName>
        <active>true</active>
        <label>CPC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goal_Based_Achievements</fullName>
        <active>true</active>
        <label>Goal Based Achievements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participation_Based_Achievements</fullName>
        <active>true</active>
        <label>Participation Based Achievements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Starts</fullName>
        <active>true</active>
        <label>Starts</label>
    </recordTypes>
    <recordTypes>
        <fullName>X40_Challenge</fullName>
        <active>true</active>
        <label>40% Challenge</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>